<resources>
    <string name="app_name">Smart Living</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="port">Port</string>
    <string name="address">IP Address</string>
    <string name="connect">Connect</string>
    <string name="fans">Fans</string>
    <string name="lights">Lights</string>
    <string name="ac">Air Conditioner</string>
    <string name="misc">Misc</string>
    <string name="temp">Temperature</string>
    <string name="humid">Relative Humidity</string>
    <string name="conc">CO Conc.</string>
    <string name="living">Smart Living</string>
    <string name="reason">This app was created for Environmental Science group project. Made By Sheel.</string>
    <string name="disconnect">Disconnect</string>
    <string name="iiitd">Indraprastha Institute of Information Technology</string>
    <string name="title_activity_control">Control</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
