<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evssmart.sheel.smartliving.SwitchFragment"
    android:background="@android:color/black">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_blue_grey_950">

        <Switch
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/fans"
            android:id="@+id/fan_switch"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="@android:color/background_light"
            android:typeface="monospace"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Switch
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/lights"
            android:id="@+id/light_switch"
            android:layout_below="@+id/fan_switch"
            android:layout_alignEnd="@+id/fan_switch"
            android:layout_marginTop="60dp"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:typeface="monospace" />

        <Switch
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/ac"
            android:id="@+id/ac_switch"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/light_switch"
            android:layout_alignStart="@+id/light_switch"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:typeface="monospace" />

        <Switch
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/misc"
            android:id="@+id/misc_switch"
            android:layout_below="@+id/ac_switch"
            android:layout_alignStart="@+id/ac_switch"
            android:layout_marginTop="60dp"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:typeface="monospace" />

    </RelativeLayout>

</FrameLayout>
