<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/black">

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/connect"
        android:id="@+id/connect"
        android:enabled="false"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="onConnectPress"
        android:layout_below="@+id/port"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light"
        android:focusable="false"
        android:singleLine="true"
        android:typeface="monospace"
        android:visibility="visible"
        android:textAppearance="@style/AppTheme"
        android:background="@drawable/button_s" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/address"
        android:editable="true"
        android:enabled="true"
        android:clickable="true"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:hint="@string/address"
        android:textColorHint="@android:color/tertiary_text_dark"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:layout_above="@+id/port"
        android:layout_centerHorizontal="true"
        android:typeface="monospace" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/port"
        android:clickable="true"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/port"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:textColorHint="@android:color/tertiary_text_dark"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:typeface="monospace"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/living"
        android:id="@+id/title"
        android:textColor="@android:color/background_light"
        android:enabled="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:typeface="monospace"
        android:layout_above="@+id/address"
        android:layout_centerHorizontal="true"
        android:focusable="false" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/globe"
        android:scaleType="centerCrop"
        android:layout_above="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/iiitd"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light"
        android:typeface="monospace"
        android:textAlignment="center" />

</RelativeLayout>
