<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evssmart.sheel.smartliving.DataFragment"
    android:background="@color/material_blue_grey_950">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:id="@+id/temp_tview"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:textColor="@android:color/black"
            android:typeface="monospace"
            android:textSize="20sp"
            android:gravity="center"
            android:enabled="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:id="@+id/humidity_tview"
            android:layout_below="@+id/temp_tview"
            android:layout_alignEnd="@+id/temp_tview"
            android:layout_marginTop="60dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:id="@+id/conc_tview"
            android:layout_below="@+id/humidity_tview"
            android:layout_alignStart="@+id/humidity_tview"
            android:layout_marginTop="60dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:typeface="monospace"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temp"
            android:id="@+id/temp_text"
            android:layout_marginStart="37dp"
            android:typeface="monospace"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:layout_alignTop="@+id/temp_tview"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/humid"
            android:id="@+id/humidity_text"
            android:layout_alignTop="@+id/humidity_tview"
            android:layout_alignStart="@+id/temp_text"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@android:color/background_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/conc"
            android:id="@+id/conc_text"
            android:layout_alignTop="@+id/conc_tview"
            android:layout_alignStart="@+id/humidity_text"
            android:typeface="monospace"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:gravity="center_vertical" />
    </RelativeLayout>

</FrameLayout>
